@@ -92,6 +92,9 @@ version 2.8.0 (??/??/????):
 	  (Keith Moyer) (#12451)
 	* Correctly handle a buddy's unsetting his/her vCard-based avatar.
 	  (Matthew W.S. Bell) (#13370)
+	* Squash one more situation that resulted in duplicate entries in
+	  the roster (this one where the server reports the buddy as being
+	  in the same (empty) group.  (Reported by Danny Mayer)
 
 	Plugins:
 	* The Voice/Video Settings plugin now includes the ability to test
